contact me no-wrap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
     padding: 20px 30px;
     font-family: monospace;
     font-size: 22px;
-
+    white-space: nowrap;
 }
 
 .rightNav{
